--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include python_hackrf/pylibhackrf/hackrf.h
-include python_hackrf/pylibhackrf/chackrf.pxd
+include python_hackrf/pylibhackrf/pyhackrf.pyx
 include README.md
 include pyproject.toml
