--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,5 @@
+include python_hackrf/pylibhackrf/pyhackrf_android.pyx
+include python_hackrf/pylibhackrf/chackrf_android.pxd
+include python_hackrf/pylibhackrf/hackrf_android.c
 include pyproject.toml
 include README.md
