--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,13 @@ description = "This is a wrapper for hackrf. It includes both libhackrf and hack
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
-    "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
-    "Operating System :: MacOS",
-    "Operating System :: POSIX :: Linux",
-    "Operating System :: Windows",
+    "Programming Language :: Python :: 3",
     "Operating System :: Android",
+    "Operating System :: POSIX :: Linux",
+    "Operating System :: MacOS",
+    "Operating System :: MacOS :: MacOS X",
+    "Operating System :: Microsoft :: Windows",
 ]
 
 [project.urls]
