--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include python_hackrf/pylibhackrf/pyhackrf_android.pyx
 include python_hackrf/pylibhackrf/chackrf_android.pxd
 include python_hackrf/pylibhackrf/pyhackrf.pyi
 include python_hackrf/pylibhackrf/pyhackrf.pyx
+include python_hackrf/pylibhackrf/pyhackrf.pxd
 include python_hackrf/pylibhackrf/chackrf.pxd
 include pyproject.toml
 include README.md
