--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,6 @@ include python_hackrf/pylibhackrf/chackrf.pxd
 include python_hackrf/pylibhackrf/pyhackrf.pyi
 include python_hackrf/pylibhackrf/pyhackrf.pyx
 include python_hackrf/pylibhackrf/pyhackrf.pxd
+include python_hackrf_bootstrap.pth
 include pyproject.toml
 include README.md
