--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "python_hackrf"
-version = "1.3.2"
+version = "1.4.0"
 authors = [
   {name="Leonid Gvozdev", email="leo.gvozdev.dev@gmail.com"},
 ]
 description = "This is a wrapper for hackrf. It includes both libhackrf and hackrf-tools"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
@@ -26,7 +26,7 @@ dependencies = [
 
 [build-system]
 requires = [
-    "Cython==0.29.37",
+    "Cython>=3.1.0,<3.2",
     "setuptools",
     "wheel",
     "numpy",
