--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 include python_hackrf/pyhackrf_tools/pyhackrf_transfer.pyi
-include python_hackrf/pyhackrf_tools/pyhackrf_transfer.pxd
+include python_hackrf/pyhackrf_tools/pyhackrf_transfer.pyx
 include python_hackrf/pyhackrf_tools/pyhackrf_sweep.pyi
-include python_hackrf/pyhackrf_tools/pyhackrf_sweep.pxd
+include python_hackrf/pyhackrf_tools/pyhackrf_sweep.pyx
 include python_hackrf/pylibhackrf/pyhackrf.pyi
 include python_hackrf/pylibhackrf/pyhackrf.pyx
 include python_hackrf/pylibhackrf/pyhackrf.pxd
